WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
198455
Non-composited negative z-order children should not trigger creation of a foreground layer
https://bugs.webkit.org/show_bug.cgi?id=198455
Summary
Non-composited negative z-order children should not trigger creation of a for...
Simon Fraser (smfr)
Reported
2019-06-01 10:56:30 PDT
Non-composited negative z-order children should not trigger creation of a foreground layer
Attachments
Patch
(20.17 KB, patch)
2019-06-01 10:59 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews105 for mac-highsierra-wk2
(2.81 MB, application/zip)
2019-06-01 12:13 PDT
,
EWS Watchlist
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2019-06-01 10:59:12 PDT
Created
attachment 371115
[details]
Patch
EWS Watchlist
Comment 2
2019-06-01 12:13:04 PDT
Comment on
attachment 371115
[details]
Patch
Attachment 371115
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
https://webkit-queues.webkit.org/results/12349699
New failing tests: http/wpt/service-workers/service-worker-networkprocess-crash.html
EWS Watchlist
Comment 3
2019-06-01 12:13:07 PDT
Created
attachment 371118
[details]
Archive of layout-test-results from ews105 for mac-highsierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-highsierra-wk2 Platform: Mac OS X 10.13.6
WebKit Commit Bot
Comment 4
2019-06-01 14:40:10 PDT
Comment on
attachment 371115
[details]
Patch Clearing flags on attachment: 371115 Committed
r246017
: <
https://trac.webkit.org/changeset/246017
>
WebKit Commit Bot
Comment 5
2019-06-01 14:40:12 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2019-06-01 14:42:55 PDT
<
rdar://problem/51333029
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug